Rework workers interruption. Add test for pizzeria as a whole